--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/estilos.css">
 
     <title>Michael D'</title>
+    <link rel="icon" href="img/m.png">
     
 </head>
 
