Reduciendo texto Banco Cibertec

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <p class="tools">JQuery | Net Framework | Html | Css</p>
                         <h1 class="display-4">Banco Cibertec</h1>
                         <hr>
-                        <p>“Banco Cibertec” es un proyecto desarrollado como una plataforma de préstamos bancarios online, teniendo como principal característica la agilidad de los préstamos.</p>
+                        <p>“Banco Cibertec” es un proyecto desarrollado como una plataforma de préstamos bancarios online.</p>
                         <button type="button" id="bancoCibertec" class="redirec btn btn-line">Ver mi proyecto</button>
                     </div>
                 </div>
