reduccion font-size Banco Cibertec

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <img src="img/graffiti/graffiti.jpg" alt="">
     </div>
 
-    <div class="loading">
+    <!-- <div class="loading">
         <div class="spinner">
             <div class="sk-folding-cube">
                 <div class="sk-cube1 sk-cube"></div>
@@ -39,7 +39,7 @@
                 <b>Cargando...</b>
             </div>
         </div>
-    </div>
+    </div> -->
     <div id="multiscroll">
         <div class="ms-left">
             <div class="ms-section l-uno"></div>
@@ -74,7 +74,7 @@
                 <div class="container">
                     <div class="contenido">
                         <p class="tools">JQuery | Net Framework | Html | Css</p>
-                        <h1 class="display-4">Banco Cibertec</h1>
+                        <h1 class="display-4" style="font-size: 2.5rem;">Banco Cibertec</h1>
                         <hr>
                         <p>“Banco Cibertec” es un proyecto desarrollado como una plataforma de préstamos bancarios online.</p>
                         <button type="button" id="bancoCibertec" class="redirec btn btn-line">Ver mi proyecto</button>
