--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <img src="img/graffiti/graffiti.jpg" alt="">
     </div>
 
-    <!-- <div class="loading">
+    <div class="loading">
         <div class="spinner">
             <div class="sk-folding-cube">
                 <div class="sk-cube1 sk-cube"></div>
@@ -39,7 +39,7 @@
                 <b>Cargando...</b>
             </div>
         </div>
-    </div> -->
+    </div>
     <div id="multiscroll">
         <div class="ms-left">
             <div class="ms-section l-uno"></div>
