corrigiendo fade del footer

--- a/bancoCibertec.html
+++ b/bancoCibertec.html
@@ -122,10 +122,10 @@
     <!-- Fin contenido -->
 
     <!-- Footer -->
-    <div class="footer footer-bancoCibertec text-white" data-aos="fade-up" data-next="graffiti">
+    <div class="footer footer-bancoCibertec text-white" data-next="graffiti">
         <div class="container">
             <div class="contenido">
-                <div>
+                <div data-aos="fade-up">
                     <p class="">Siguiente Proyecto</p>
                     <h1 class="display-4">Graffiti</h1>
                 </div>
