--- a/gameStore.html
+++ b/gameStore.html
@@ -122,10 +122,10 @@
     <!-- Fin contenido -->
 
     <!-- Footer -->
-    <div class="footer footer-gameStore text-white" data-aos="fade-up" data-next="bancoCibertec">
+    <div class="footer footer-gameStore text-white" data-next="bancoCibertec">
         <div class="container">
             <div class="contenido">
-                <div>
+                <div data-aos="fade-up">
                     <p class="">Siguiente Proyecto</p>
                     <h1 class="display-4">Banco Cibertec</h1>
                 </div>
