--- a/graffiti.html
+++ b/graffiti.html
@@ -127,10 +127,10 @@
     <!-- Fin contenido -->
 
     <!-- Footer -->
-    <div class="footer footer-graffiti text-white" data-aos="fade-up" data-next="marketing">
+    <div class="footer footer-graffiti text-white" data-next="marketing">
         <div class="container">
             <div class="contenido">
-                <div>
+                <div data-aos="fade-up">
                     <p class="">Siguiente Proyecto</p>
                     <h1 class="display-4">Marketing</h1>
                 </div>
