--- a/marketing.html
+++ b/marketing.html
@@ -122,10 +122,10 @@
     <!-- Fin contenido -->
 
     <!-- Footer -->
-    <div class="footer footer-marketing text-white" data-aos="fade-up" data-next="gameStore">
+    <div class="footer footer-marketing text-white" data-next="gameStore">
         <div class="container">
             <div class="contenido">
-                <div>
+                <div data-aos="fade-up">
                     <p class="">Siguiente Proyecto</p>
                     <h1 class="display-4">GameStore</h1>
                 </div>
