imagen "yo" carga al inicio

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <img src="img/gameStore/gameStore.jpg" alt="">
         <img src="img/bancoCibertec/bancoCibertec.jpg" alt="">
         <img src="img/graffiti/graffiti.jpg" alt="">
+        <img src="img/yo.png" alt="">
     </div>
 
     <div class="loading">
