carga inicial de todas las imagenes

--- a/index.html
+++ b/index.html
@@ -21,10 +21,25 @@
 <body>
     <div style="display: none;">
         <img src="img/fondo.png" alt="">
+
         <img src="img/marketing/marketing.jpg" alt="">
+        <img src="img/marketing/marketing_movil.png" alt="">
+        <img src="img/marketing/marketing_pc.png" alt="">
+        <img src="img/marketing/marketing_prototype.png" alt="">
+
         <img src="img/gameStore/gameStore.jpg" alt="">
+        <img src="img/gameStore/gameStore_items.png" alt="">
+        <img src="img/gameStore/gameStore_movil.png" alt="">
+        <img src="img/gameStore/gameStore_pc.png" alt="">
+
         <img src="img/bancoCibertec/bancoCibertec.jpg" alt="">
+        <img src="img/bancoCibertec/bancoCibertec_movil.png" alt="">
+        <img src="img/bancoCibertec/bancoCibertec_pc.png" alt="">
+        <img src="img/bancoCibertec/gameStore_items.png" alt="">
+
         <img src="img/graffiti/graffiti.jpg" alt="">
+
+
         <img src="img/yo.png" alt="">
     </div>
 
