actualización cv y descripción

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <p class="tools">JavaScript | Html | Css</p>
                         <h1 class="display-4">MarkeTing</h1>
                         <hr>
-                        <p class="">“MarkeTing” es una plataforma de marketing en línea que maneja toda su publicidad con YouTube y Facebook. El objetivo es posicionar las marcas de clientes en las distintas redes sociales.</p>
+                        <p class="">“MarkeTing” es una plataforma de marketing en línea que maneja toda su publicidad con YouTube y Facebook. El objetivo es posicionar las marcas de los clientes en las distintas redes sociales.</p>
                         <button type="button" id="marketing" class="redirec btn btn-line">Ver mi proyecto</button>
                     </div>
                 </div>
@@ -81,7 +81,7 @@
                         <p class="tools">Angular 8 | Html | Css</p>
                         <h1 class="display-4">GameStore</h1>
                         <hr>
-                        <p>“GameStore” es un proyecto web diseñada y desarrollada para la venta de videojuegos, teniendo como característica principal, ser exclusivamente una tienda virtual de compra y venta.</p>
+                        <p>“GameStore” es un proyecto web diseñado y desarrollado para la venta de videojuegos, teniendo como característica principal ser exclusivamente una tienda virtual de compra y venta.</p>
                         <button type="button" id="gameStore" class="redirec btn btn-line">Ver mi proyecto</button>
                     </div>
                 </div>
